[GTK] Epiphany does not make connections in Incognito Mode after clearing .cache https://bugs.webkit.org/show_bug.cgi?id=216430

Reviewed by Adrian Perez de Castro.

Source/WebKit:

The problem is that when using an ephemeral context, the download is started before the ephemeral session has
been registered in the network process, so it's just ignored.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createDownloadProxy): Pass the given WebsiteDataStore to ensureNetworkProcess().

Tools:

Add unit test to check we can start downloads in ephemeral sessions before a web view is created.

* TestWebKitAPI/Tests/WebKitGLib/TestDownloads.cpp:
(testDownloadEphemeralContext):
(beforeAll):

Canonical link: https://commits.webkit.org/229492@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267226 268f45cc-cd09-0410-ab3c-d52691b4dbfc